# Untagged-Opportunities

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.azure/: config
config/: partners.yaml  settings.yaml  taxonomy.json
docs/: PRD.md  WIREFRAME.md
scripts/: create_demo.py  generate_demo_data.py
src/: api.py  main.py
src/approval/: browser_review.py  email_builder.py  token_utils.py  webhook_handler.py
src/audit/: audit_logger.py
src/engine/: account_history.py  keyword_extractor.py  llm_reasoner.py  recommender.py  similarity_scorer.py  taxonomy_mapper.py  web_fallback.py
src/extract/: blob_reader.py  blob_writer.py  sharepoint_reader.py
src/filter/: filter_untagged.py
src/parse/: xls_parser.py
src/store/: __init__.py  cosmos_client.py  digest_store.py  state_manager.py
src/update/: dataset_updater.py
tests/: test_engine.py  test_llm_and_state.py
webapp_logs/deployments/: active
webapp_logs/deployments/07fc7637-e221-476b-a279-d838ded28980/: status.xml
webapp_logs/deployments/0935b6cc-be86-4b34-8c99-02757deacb01/: status.xml
webapp_logs/deployments/11626c98-183d-45f1-b5d7-677a47425205/: status.xml
webapp_logs/deployments/14d395fe-4591-4228-a961-5c1a6c4698cf/: status.xml
webapp_logs/deployments/24edfb14-d2e6-4a9b-a882-78d736572637/: status.xml
webapp_logs/deployments/6ed26d98-23cb-4de2-8db6-ec63d09a1918/: status.xml
webapp_logs/deployments/7d115fb3-3ae7-4028-94e5-89745e6dfe80/: status.xml
workflows/: n8n_workflow.backup.json  n8n_workflow.json
(+207 files in other folders)
