[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "untagged-opportunities"
version = "0.1.0"
description = "Agentic partner retagging for THOR untagged opportunities"
requires-python = ">=3.11"
dependencies = [
    "openpyxl>=3.1.2",
    "polars>=0.20.0",
    "openai>=1.12.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "jinja2>=3.1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.3.0",
]
