[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "untagged-opportunities"
version = "0.1.0"
description = "Agentic partner retagging for THOR untagged opportunities"
requires-python = ">=3.11"
dependencies = [
    "polars[calamine]>=0.20.0",
    "openai>=1.12.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "jinja2>=3.1.3",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "azure-storage-blob>=12.19.0",
    "azure-cosmos>=4.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.3.0",
]
